<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/rounded_layout_detailed_practice"
        android:paddingBottom="16dp"
        tools:context=".practice.Details.PracticeDetailFragment">

        <TextView
            android:id="@+id/practice_name_featured"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/bacground_of_practice_name"
            android:gravity="center_horizontal"
            android:lines="1"
            android:textColor="@color/colorLightCoffee"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/practice_name_featured"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/practice_image_detail"
                android:layout_width="250dp"
                android:layout_height="375dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/mahakala" />

            <LinearLayout
                android:id="@+id/practice_name_group_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@id/practice_image_detail"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_layout"
                android:orientation="horizontal"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">

                <TextView
                    android:id="@+id/practice_name_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_detail" />

                <EditText
                    android:id="@+id/practice_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/practice_progress_group_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/practice_name_group_layout"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_layout"
                android:orientation="horizontal"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">

                <TextView
                    android:id="@+id/practice_status_progress_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_detail" />

                <EditText
                    android:id="@+id/practice_status_progress_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/practice_max_repetition_group_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/practice_progress_group_layout"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_layout"
                android:orientation="horizontal"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">

                <TextView
                    android:id="@+id/practice_status_maxrepetition_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_detail" />

                <EditText
                    android:id="@+id/practice_status_maxrepetition_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/practice_buddha_progress_group_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/practice_max_repetition_group_layout"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_layout"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/practice_detail_progress_name"
                    android:textSize="@dimen/text_size_detail" />

                <iso.piotrowski.marek.nyndro.UIComponents.BuddaProgressBar xmlns:custom="http://schemas.android.com/apk/res/iso.piotrowski.marek.nyndro"
                    android:id="@+id/practice_progress_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:visibility="visible"
                    custom:color_buddha="#A80808"
                    custom:max_progress="111111"
                    custom:progress="0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/practice_description_group_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/practice_buddha_progress_group_layout"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_layout"
                android:orientation="horizontal"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">

                <TextView
                    android:id="@+id/practice_description_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_detail" />

                <EditText
                    android:id="@+id/practice_description_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/practice_repetition_group_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/practice_description_group_layout"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_layout"
                android:orientation="horizontal"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">

                <TextView
                    android:id="@+id/practice_repetition_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_detail" />

                <EditText
                    android:id="@+id/practice_repetition_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/practice_repetition_group_layout"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_layout"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">

                <TextView
                    android:id="@+id/practice_date_last_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_detail" />

                <TextView
                    android:id="@+id/practice_date_next_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_detail" />
            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
