<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical"
    card_view:cardBackgroundColor="@color/colorLightCoffee"
    card_view:cardCornerRadius="8dp"
    card_view:contentPadding="-4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/statystics_practice_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/bacground_of_practice_name"
            android:gravity="center_horizontal"
            android:lines="1"
            android:textColor="@color/colorLightCoffee"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/statystics_practice_image_id"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_below="@+id/statystics_practice_name"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="2dp"
            android:layout_below="@id/statystics_practice_name"
            android:layout_toRightOf="@id/statystics_practice_image_id"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/count_practice_stats" />

                <TextView
                    android:id="@+id/statystics_practice_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/average_weeks" />

                <TextView
                    android:id="@+id/statystics_practice_average_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/average_months" />

                <TextView
                    android:id="@+id/statystics_practice_average_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/average_days" />

                <TextView
                    android:id="@+id/statystics_practice_average_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/expected_day" />

                <TextView
                    android:id="@+id/statystics_practice_expected_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/separator_1"
            android:layout_below="@id/statystics_practice_image_id"
            style="@style/Separator"/>

        <LinearLayout
            android:id="@+id/statistics_dayofweek_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/statystics_practice_image_id"
            android:layout_below="@id/separator_1"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pie_chart_days_stats"
                android:layout_width="match_parent"
                android:layout_height="256dp" />

        </LinearLayout>

        <View
            android:id="@+id/separator_2"
            android:layout_below="@id/statistics_dayofweek_layout"
            style="@style/Separator"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/statistics_dayofweek_layout"
            android:layout_below="@id/separator_2"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.RadarChart
                android:id="@+id/radar_chart_months_stats"
                android:layout_width="match_parent"
                android:layout_height="256dp" />

        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>