<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="counter_text" type="id"/>
    <item name="counter_layout" type="id"/>
</resources>